--- a/app/assets/stylesheets/selling.css.sass
+++ b/app/assets/stylesheets/selling.css.sass
@@ -1,6 +1,7 @@
 $bg: #D77F7D
 $white: rgba(255,255,255,1)
 $black: rgba(0,0,0,1)
+$font-color: #666
 
 *
   font-family: 'Lato', Arial
@@ -18,6 +19,19 @@ html, body
 a 
   text-decoration: none
   cursor: pointer
+
+.text-danger .invalid
+  color: $bg
+
+input.form-control:focus
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(83, 176, 94, 0.3)
+  border-color: rgba(83, 176, 94, 0.8)
+input.form-control.error
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(215, 127, 125, 0.3)
+  border-color: rgba(215, 127, 125, 0.8)
+  &:focus
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(215, 127, 125, 0.3)
+    border-color: rgba(215, 127, 125, 0.8)
 
 ul#menu
   position: fixed
@@ -39,7 +53,7 @@ ul#menu
       color: #fff
       padding: 1em
       transition: 0.5s ease
-      border: 1px solid transition
+      border: 1px solid transparent
       display: block
       li.active &, &:hover
         background: rgba(0,0,0,0.1)
@@ -57,14 +71,56 @@ ul#menu
     &:nth-of-type(3)
       background: lighten($bg, 10%)
     &:nth-of-type(4)
-      background: $bg
+      @extend :nth-of-type(1)
     h1
       +title-shadow()
       font-family: 'Pacifico', cursive
       transition: 0.2s ease
       cursor: default
     p
-      color: #666
+      color: $font-color
+#form
+  .form-component
+    width: 50%
+    max-width: 500px
+    margin: 0 auto
+    padding: 1em
+    margin-bottom: 1em
+    border-radius: 3px
+    label
+      color: $font-color
+    &.form-input
+      background: rgba(255,255,255,0.2)
+      border: 3px solid rgba(255,255,255,0.5)
+    &.error.form-input input
+      @extend input.form-control.error
+    &.form-button
+      .btn-primary
+        background-color: darken($bg, 20%)
+        border: 1px solid darken($bg, 30%)
+        &:hover
+          background-color: $bg
+          border: 1px solid darken($bg, 10%)
+.congrats
+  position: absolute
+  width: 60%
+  max-height: 0
+  overflow: hidden
+  // background: rgba(255,255,255,0.3)
+  // border: 3px solid rgba(255,255,255,0.5)
+  border-radius: 3px
+  margin: auto
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
+  // display: none
+  transition: all 2s ease
+  
+.completed
+  max-height: 80%
+  
+
 video
   display: block 
 
