--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,8 +1,8 @@
+@import "fonts"
 @import "mixins"
 @import "compass"
 @import "jquery-ui"
+@import "jquery.fullPage"
 @import "bootstrap"
-@import "fonts"
-@import "plugins/*"
 @import "font-awesome"
 @import "selling"
