--- a/app/assets/stylesheets/_mixins.sass.erb
+++ b/app/assets/stylesheets/_mixins.sass.erb
@@ -1,4 +1,8 @@
 =title-shadow()
-  text-shadow: 2px 2px 4px rgba(0,0,0,0.5)  
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.5)
   &:hover
     text-shadow: 2px 2px 1px rgba(0,0,0,0.3)
+
+=panel-bg()
+  background: rgba(255,255,255,0.2)
+  border: 3px solid rgba(255,255,255,0.5)
