--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Flora</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'http://maps.googleapis.com/maps/api/js?key=AIzaSyAmI5IBTaXLT-8wS8ToNhOYkGb2ocZ795o&sensor=false' %>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAmI5IBTaXLT-8wS8ToNhOYkGb2ocZ795o&sensor=false"></script>
   <%= javascript_include_tag 'application' %>
   <!--[if lt IE 9]>
   <%= javascript_include_tag 'ie' %>
