M - fix asset - image missing

--- a/app/assets/stylesheets/selling.css.sass.erb
+++ b/app/assets/stylesheets/selling.css.sass.erb
@@ -135,5 +135,5 @@ video#flora_video
   min-height: 100%
   width: auto
   height: auto
-  background: asset-url("flora1.png") no-repeat
+  background: asset-url("flora_video.png") no-repeat
   background-size: cover
