add ebook files

--- a/app/views/selling/_slide_show.html.erb
+++ b/app/views/selling/_slide_show.html.erb
@@ -1,14 +1,10 @@
 <div class="section">
-  <div class="slide" data-anchor="slide1">
-    <%= image_tag("flora02.png") %>
-  </div>
-  <div class="slide" data-anchor="slide2">
-    <%= image_tag("flora03.png") %>
-  </div>
-  <div class="slide" data-anchor="slide3">
-    <%= image_tag("flora04.png") %>
-  </div>
-  <div class="slide" data-anchor="slide4">
-    <%= image_tag("flora05.png") %>
+  <div id="flipbook">
+    <div><%= image_tag "ebook/1.jpg" %></div>
+    <div><%= image_tag "ebook/2.jpg" %></div>
+    <div><%= image_tag "ebook/3.jpg" %></div>
+    <div><%= image_tag "ebook/4.jpg" %></div>
+    <div><%= image_tag "ebook/5.jpg" %></div>
+    <div><%= image_tag "ebook/6.jpg" %></div>
   </div>
 </div>
