--- a/app/views/selling/_slide_show.html.erb
+++ b/app/views/selling/_slide_show.html.erb
@@ -1,10 +1,10 @@
 <div class="section">
   <div id="flipbook">
-    <div><%= image_tag "ebook/1.jpg" %></div>
+    <!-- <div><%= image_tag "ebook/1.jpg" %></div>
     <div><%= image_tag "ebook/2.jpg" %></div>
     <div><%= image_tag "ebook/3.jpg" %></div>
     <div><%= image_tag "ebook/4.jpg" %></div>
     <div><%= image_tag "ebook/5.jpg" %></div>
-    <div><%= image_tag "ebook/6.jpg" %></div>
+    <div><%= image_tag "ebook/6.jpg" %></div> -->
   </div>
 </div>
