--- a/app/assets/stylesheets/selling.css.sass.erb
+++ b/app/assets/stylesheets/selling.css.sass.erb
@@ -72,13 +72,13 @@ ul#menu
     -o-background-size: cover
     background-size: cover
     &:nth-of-type(1)
-      background-image: asset-url("bg.png")
+      background-image: url(<%= asset_path 'bg.png' %>)
     &:nth-of-type(2)
       background: $bg
     &:nth-of-type(3)
       background: $bg
     &:nth-of-type(4)
-      background-image: asset-url("bg.png")
+      background-image: url(<%= asset_path 'bg.png' %>)
     h1
       +title-shadow()
       font-family: 'Pacifico', cursive
