--- a/app/assets/stylesheets/selling.css.sass.erb
+++ b/app/assets/stylesheets/selling.css.sass.erb
@@ -72,7 +72,7 @@ ul#menu
     -o-background-size: cover
     background-size: cover
     &:nth-of-type(1)
-      background-image: asset-url("bg.png", image)
+      background-image: asset-url("bg.png")
     &:nth-of-type(2)
       background: $bg
     &:nth-of-type(3)
