--- a/app/assets/javascripts/selling.coffee.erb
+++ b/app/assets/javascripts/selling.coffee.erb
@@ -37,7 +37,7 @@ $ ->
 
 
   $('#fullpage').fullpage
-    anchors: ['firstPage', 'secondPage', '3rdPage', 'lastPage'],
+    anchors: ['firstPage', 'secondPage', 'thirdPage', 'lastPage'],
     menu: '#menu'
     afterLoad: afterLoadFn
     afterSlideLoad: afterSlideLoadFn
